# skippy-xd

./: CHANGELOG  Makefile  README.md  meson.build  meson.options  skippy-xd.1  skippy-xd.1.in  skippy-xd.rc  skippy-xd.sample.rc  version.txt
Packaging/Debian/: link2getDebs
src/: clientwin.c  clientwin.h  config.c  config.h  dlist.c  dlist.h  focus.c  focus.h  img-xlib.c  layout.c  layout.h  mainwin.c  mainwin.h  skippy.c  skippy.h  tooltip.c  tooltip.h  wm.c  wm.c.rej  wm.h
